# CppRobotics

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  StyleGuide.md  requirements.txt
.github/workflows/: ai-codereviewer.yml  ai-pr-reviewer.yml  ai-review.yml  cmake-multi-platform.yml  cmake-single-platform.yml  linux-ci.yml  main.yml
cmake/: FindMatplotlibCpp.cmake
cpp_robotics/: CMakeLists.txt  package.xml
path_planning/: CMakeLists.txt
path_planning/a_star/: CMakeLists.txt  a_star.cc  a_star.h  main.cc
path_planning/a_star/src/: a_star.cpp
path_planning/grid_based_search/: CMakeLists.txt  package.xml
path_planning/grid_based_search/a_star/: CMakeLists.txt  a_star.cpp  a_star.h  a_star.hpp  a_star_test.cpp
path_planning/grid_based_search/foxglove/: grid_based_search.json
path_planning/grid_based_search/launch/: a_star_node.launch.py
path_planning/grid_based_search/ros2/: a_star_node.cc  a_star_node.cpp  grid_based_search.h  grid_based_search.hpp
path_planning/grid_based_search/test/: a_star_test.cpp
path_planning/path_planner_ros2/: CMakeLists.txt  package.xml
path_planning/path_planner_ros2/foxglove/: config.json
path_planning/path_planner_ros2/launch/: a_star_node.launch.py
path_planning/path_planner_ros2/src/: a_star_node.cpp
path_tracking/: CMakeLists.txt
path_tracking/pure_pursuit/: CMakeLists.txt  main.cc  pure_pursuit.cc  pure_pursuit.h
